[project]
name = "tong-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.50",
]

[tool.uv.scripts]
dev = "fastapi dev src/main.py"
